test/expected/explain_puw3.out
explain unsigned *x : 3
                    ^
21: error: bit-fields can be only of integral types
